[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/textures/turret.png" type="Texture" id=1]
[ext_resource path="res://entities/enemies/Turret.gd" type="Script" id=2]
[ext_resource path="res://entities/enemies/TurretProjectile.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 386.242
height = 0.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15.434, 31.685 )

[node name="Turret" type="Sprite"]
texture = ExtResource( 1 )
script = ExtResource( 2 )
projectile_scene = ExtResource( 3 )

[node name="FireTimer" type="Timer" parent="."]

[node name="FirePosition" type="Position2D" parent="."]
position = Vector2( 0, -30.0339 )

[node name="DetectionShootingArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionShootingArea"]
shape = SubResource( 1 )

[node name="TurretArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TurretArea"]
shape = SubResource( 2 )

[connection signal="body_entered" from="DetectionShootingArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionShootingArea" to="." method="_on_DetectionArea_body_exited"]
[connection signal="area_entered" from="TurretArea" to="." method="_on_TurretArea_area_entered"]
